# nist-sts

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benchmarking/: Cargo.toml  README.md  assess.c  benchmark_result.txt
benchmarking/src/: main.rs
const-calculation-scripts/: README.md  binary_matrix_probabilities.py  longest_runs_of_ones_in_a_block.py  random_excursions.py  requirements.txt
const-calculation-scripts/scripts/: Cargo.toml
libcerf/: Cargo.toml  README.md  build.rs
libcerf/cerf-wrapper/: CMakeLists.txt  cerf-wrapper.cpp  cerf-wrapper.h
libcerf/src/: bindings.rs  lib.rs
sts-cbindings/: Cargo.toml  README.md  build.rs  cbindgen.toml  generate-header.sh  header.h  sts-lib.h
sts-cbindings/example/: CMakeLists.txt  README.md  main.c
sts-cbindings/src/: bitvec.rs  constants.rs  lib.rs  test_args.rs  test_result.rs  tests.rs
sts-cbindings/src/test_runner/: mod.rs  test.rs  test_args.rs
sts-cmd/: Cargo.toml  README.md  sts-benchmark.toml  sts-example.toml
sts-cmd/src/: cmd_args.rs  csv.rs  lib.rs  main.rs  toml_config.rs  valid_arg.rs
sts-lib/: Cargo.toml  README.md
sts-lib/src/: bitvec.rs  frequency_block_test.rs  frequency_test.rs  internals.rs  lib.rs  test_runner.rs
sts-lib/src/bitvec/: array_chunks.rs  array_chunks_u32.rs  chunks.rs  iter.rs  mod.rs
sts-lib/src/tests/: binary_matrix_rank.rs  cumulative_sums.rs  frequency.rs  frequency_block.rs  frequency_block_test.rs  frequency_test.rs  linear_complexity.rs  longest_run_of_ones.rs  maurers_universal_statistical.rs  mod.rs  nist_text_examples.rs  non_overlapping_template_matching.rs  non_overlappping_template_matching.rs  random_excursions.rs  random_excursions_variant.rs  runs.rs  runs_test.rs  serial.rs  spectral_dft.rs
sts-lib/src/tests/serial_and_approximate_entropy/: approximate_entropy.rs  mod.rs  serial.rs
sts-lib/src/tests/template_matching/: mod.rs  non_overlapping.rs  overlapping.rs
sts-lib/src/unit_tests/: full_examples.rs  mod.rs  nist_text_examples.rs
sts-lib/sts-lib-derive/: Cargo.toml
sts-lib/sts-lib-derive/src/: lib.rs
sts-lib/templates/: README.md  template10  template11  template12  template13  template14  template15  template16  template17  template18.xz  template19.xz  template20.xz  template21.xz  template3  template4  template5  template6  template7  template8  template9
sts-lib/test-files/: README.md
sts-pybindings/: Cargo.toml  README.md
sts-pybindings/src/: bitvec.rs  lib.rs  test_args.rs  test_runner.rs  tests.rs
