[workspace]
members = [
    "const-calculation-scripts/scripts",
    "libcerf",
    "sts-lib",
    "sts-lib/sts-lib-derive",
    "sts-cbindings",
    "sts-pybindings",
    "sts-cmd",
    "benchmarking",
]
# by default, only build the rust library and command-line application - c and python bindings may need additional dependencies
default-members = [
    "libcerf",
    "sts-lib",
    "sts-cmd",
]
resolver = "2"

# build options for better performance when building the release version
[profile.release]
# unwinding the stack into FFI code is undefined behaviour, better abort the program
panic = "abort"
# slower compilation, more optimizations possible
codegen-units = 1
# link time optimizations
lto = "fat"
# disable all debuginfo
strip = "symbols"
