[package]
name = "sts-lib"
version = "0.1.0"
edition = "2021"
authors = ["Elias Riesinger <elias.riesinger@students.fh-hagenberg.at>"]
rust-version = "1.78"
description = "An implementation of the NIST STS - rust library"
readme = true
repository = "https://git.riesinger.xyz/public/nist-sts"
license = "MIT"

[dependencies]
libcerf = { path = "../libcerf" }
rayon = "1.10.0"
thiserror = "1.0.61"
