[package]
name = "sts-lib"
version = "0.1.0"
edition = "2021"
authors = ["Elias Riesinger <elias.riesinger@students.fh-hagenberg.at>"]
rust-version = "1.80"
description = "An implementation of the NIST STS - rust library"
readme = true
repository = "https://git.riesinger.xyz/bachelorarbeit/nist-sts"
license = "MIT"

[dependencies]
bigdecimal = "0.4.5"
libcerf = { path = "../libcerf" }
lzma-rs = "0.3.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rustfft = "6.2.0"
statrs = "0.17.1"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
